<resources>
    <string name="static_app_name">PPayed</string>
    <string name="text_sample_date">26-Dec-2020</string>
    <string name="static_sample_note_title">Maria MSBP</string>
    <string name="text_sample_payment">2,200</string>
    <string name="hint_work_name">Work Name</string>
    <string name="hint_payment">Payment</string>
    <string name="hint_student_name">Student Name</string>
    <string name="hint_date">Date</string>
    <string name="text_sample_month_year_name">January 2020</string>
    <string name="text_sample_money_amount">12,000</string>
    <string name="text_total_payment_desc">Total Payment</string>
    <string name="label_tab_item_works">Works</string>
    <string name="label_tab_item_payments">Payments</string>
    <string name="label_tab_item_exports">Exports</string>
    <string name="action_add_new_work">Add new work</string>
    <string name="text_sample_student_name">Maria Sultana</string>
    <string name="desc_developer_name">Developed By</string>
    <string name="version_detail">Version 2.0 Stable </string>
    <string name="version">v2.0-stable</string>
    <string name="report_issue">Report issue</string>
    <string name="report_issue_here">Report the issue here</string>
    <string name="issue_url">https://github.com/kabirnayeem99/PPayed/issues/new/choose</string>
    <string name="about">"PPayed is a FOSS app to manage your payments in contract-based works. "</string>
    <string name="changelog">Changelog</string>
    <string name="changes_url">https://github.com/kabirnayeem99/PPayed/releases</string>
    <string name="send_email">Send email</string>
    <string name="email_address">kabirnayeem.99@gmail.com</string>
    <string name="question_concerning_ppayed">Questions about PPayed</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="anon">ANON</string>
    <string name="app_name">Android_XML_LOGIN_AND_REGISTER_UI_KIT_2</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="by_signing_up_you_agree_with_our">By signing up, you agree with our</string>
    <string name="register">REGISTER</string>
    <string name="without_login">NO LOGIN</string>

    <string name="welcome_message">PPayed!!</string>
    <string name="please_login_to_your_account">Please Login To Have Online Syncing</string>
    <string name="hint_email_address">Email Adress</string>
    <string name="hint_password">Password</string>
    <string name="btn_label_forgot">Forget Password</string>
    <string name="btn_label_login">LOGIN</string>
    <string name="btn_label_register_now">REGISTER NOW</string>
    <string name="btn_label_without_login">NO LOGIN</string>
    <string name="label_tab_item_about">About</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="label_tab_item_analytics">Analytics</string>

</resources>